2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Apply convention for libraries, use underscore-separator.

	* misc/Makefile: Build and install libopenvas_misc* rather than
	libopenvasmisc*.

	* hg/Makefile: Build and install libopenvas_hg* rather than
	libopenvashg*.

	* libopenvas-config.in, nasl/CMakeLists.txt, misc/README.txt, hg/test.c:
	Adjusted to changes.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/ids_send.c: Added note about BSD_BYTE_ORDERING coming from
	config.h.

	* nasl/exec.c, nasl/nasl.c, nasl/nasl_cmd_exec.c, nasl/nasl_grammar.y,
	nasl/nasl_packet_forgery.c: Removed inclusion of includes.h, added
	missing includes.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/scanners_utils.c (getpts): Merged doc, replaced K&R header decl.

	* misc/network.c: Minor doc.

	* misc/network.h: Added separating newline.

	* misc/share_fd.c: Removed unneeded include.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_ssh_login.c, nasl/capture_packet.c, nasl/exec.c,
	nasl/nasl_http.c, nasl/nasl_packet_forgery.c, nasl/nasl_scanner_glue.c,
	nasl/nasl_var.c: Replaced "includes.h" by respective includes where
	possible.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_logging.c: Added missing include, corrected doc and type
	of local variable.

	* misc/openvas_logging.h: Corrected type of variable.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* hg/hg_filter.c, hg/hg_debug.c, hg/hg_utils.c, hg/hg_subnet.c,
	hg/test.c, hg/hosts_gatherer.c, hg/hg_dns_axfr.c, hg/hosts_gatherer.h,
	hg/hg_add_hosts.c: Removed inclusion of includes.h, added missing
	includes.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/pcap.c: Cosmetics, doc.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/strutils.h, nasl/nasl_tree.c, nasl/nasl_signature.c,