@@ -43,6 +43,7 @@ openvas-libraries.tmpl: openvas-libraries.tmpl.in configure VERSION
 install : all
 	test -d $(DESTDIR)${prefix} || ${INSTALL_DIR} -m 755 $(DESTDIR)${prefix}
 	test -d $(DESTDIR)${includedir}/openvas || ${INSTALL_DIR} -m 755 $(DESTDIR)${includedir}/openvas
+	test -d $(DESTDIR)${includedir}/openvas/base || ${INSTALL_DIR} -m 755 $(DESTDIR)${includedir}/openvas/base
 
 	cd base && ${MAKE} install
 	cd hg   && ${MAKE} install
@@ -76,14 +77,14 @@ install : all
 	$(INSTALL) -m 0444 misc/store.h $(DESTDIR)${includedir}/openvas
 	$(INSTALL) -m 0444 misc/system.h $(DESTDIR)${includedir}/openvas
 	$(INSTALL) -m 0444 misc/www_funcs.h $(DESTDIR)${includedir}/openvas
-	$(INSTALL) -m 0444 base/certificate.h $(DESTDIR)${includedir}/openvas
-	$(INSTALL) -m 0444 base/hash_table_util.h $(DESTDIR)${includedir}/openvas
+	$(INSTALL) -m 0444 base/certificate.h $(DESTDIR)${includedir}/openvas/base
+	$(INSTALL) -m 0444 base/hash_table_util.h $(DESTDIR)${includedir}/openvas/base
 	$(INSTALL) -m 0444 nasl/nasl.h   $(DESTDIR)${includedir}/openvas
-	$(INSTALL) -m 0444 base/nvti.h $(DESTDIR)${includedir}/openvas
-	$(INSTALL) -m 0444 base/openvas_certificate.h $(DESTDIR)${includedir}/openvas
-	$(INSTALL) -m 0444 base/openvas_certificate_file.h $(DESTDIR)${includedir}/openvas
-	$(INSTALL) -m 0444 base/openvas_string.h $(DESTDIR)${includedir}/openvas
-	$(INSTALL) -m 0444 base/severity_filter.h $(DESTDIR)${includedir}/openvas
+	$(INSTALL) -m 0444 base/nvti.h $(DESTDIR)${includedir}/openvas/base
+	$(INSTALL) -m 0444 base/openvas_certificate.h $(DESTDIR)${includedir}/openvas/base
+	$(INSTALL) -m 0444 base/openvas_certificate_file.h $(DESTDIR)${includedir}/openvas/base
+	$(INSTALL) -m 0444 base/openvas_string.h $(DESTDIR)${includedir}/openvas/base
+	$(INSTALL) -m 0444 base/severity_filter.h $(DESTDIR)${includedir}/openvas/base
 	$(INSTALL) -m 0444 omp/omp.h $(DESTDIR)${includedir}/openvas
 	$(INSTALL) -m 0444 omp/xml.h $(DESTDIR)${includedir}/openvas
 	test -d $(DESTDIR)${bindir} || ${INSTALL_DIR} -m 755 $(DESTDIR)${bindir}
